working new version

--- a/src/index.html
+++ b/src/index.html
@@ -18,17 +18,19 @@
   <!-- THE TITLE OF THE PAGE -->
   <title>Roundazzle | Home</title>
 
-  <link rel="preload" href="../assets/icons/bootstrap-icons.css" as="style">
-  <link rel="preload" href="../assets/css/fontstyle.css" as="style">
-  <link rel="preload" href="../assets/css/layout.css" as="style">
-  <link rel="preload" href="../assets/css/animation.css" as="style">
-  <link rel="preload" href="../assets/css/style.css" as="style">
+  <base href="/">
 
-  <link rel="stylesheet" href="../assets/icons/bootstrap-icons.css">
-  <link rel="stylesheet" href="../assets/css/fontstyle.css">
-  <link rel="stylesheet" href="../assets/css/layout.css">
-  <link rel="stylesheet" href="../assets/css/animation.css">
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="preload" href="/assets/icons/bootstrap-icons.css" as="style">
+  <link rel="preload" href="/assets/css/fontstyle.css" as="style">
+  <link rel="preload" href="/assets/css/layout.css" as="style">
+  <link rel="preload" href="/assets/css/animation.css" as="style">
+  <link rel="preload" href="/assets/css/style.css" as="style">
+
+  <link rel="stylesheet" href="/assets/icons/bootstrap-icons.css">
+  <link rel="stylesheet" href="/assets/css/fontstyle.css">
+  <link rel="stylesheet" href="/assets/css/layout.css">
+  <link rel="stylesheet" href="/assets/css/animation.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="icon" type="image/png" href="art/favicon.png">
 </head>
 <body>
